--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
   "manifest_version": 3,
   "name": "Fix YouTube Mute Caption Bug",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Prevents YouTube subtitles from shrinking when pressing the mute key.",
   "permissions": [
-    "scripting"
+    "scripting",
+    "storage"
   ],
+  "action": {
+    "default_popup": "popup.html"
+  },
   "host_permissions": [
     "*://www.youtube.com/*"
   ],
